--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Docker login
         run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build
-        run: docker build -t standardnotes .
+        run: docker build -t standardnotes-web .
       - name: Tags
         run: |
-          docker tag standardnotes ${{ secrets.DOCKER_USER }}/standardnotes:${{ github.sha }}
-          docker tag standardnotes ${{ secrets.DOCKER_USER }}/standardnotes:latest
+          docker tag standardnotes-web ${{ secrets.DOCKER_USER }}/standardnotes-web:${{ github.sha }}
+          docker tag standardnotes-web ${{ secrets.DOCKER_USER }}/standardnotes-web:latest
       - name: Push
         run: |
-          docker push ${{ secrets.DOCKER_USER }}/standardnotes:${{ github.sha }}
-          docker push ${{ secrets.DOCKER_USER }}/standardnotes:latest
+          docker push ${{ secrets.DOCKER_USER }}/standardnotes-web:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_USER }}/standardnotes-web:latest
